<resources>
    <string name="app_name">ControlProject</string>
    <string name="shutdown_back" />
    <string name="exit">Exit</string>
    <string name="remote">Remote</string>
    <string name="start">Start</string>
    <string name="photo">photo</string>
    <string name="start_media">start media</string>
    <string name="stop_media">stop media</string>
    <string name="start_audio">start audio</string>
    <string name="stop_audio">stop audio</string>
    <string name="send">send</string>

</resources>